--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="category">
         <h2>GAMES</h2>
         <div class="game-entry">
-            <button onclick="downloadGame('snake.exe')">Snake with a twist</button>
-            <span class="description">Use arrows to move, and S for shop</span>
+            <button onclick="downloadGame('swat.zip')">Snake with a twist</button>
+            <span class="description">Use arrows to move, and S for shop, unzip the folder, go into scr, go into disc, then open up main.py</span>
         </div>
 
         <!-- 👇 Add more game entries like this -->
