--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <div class="category">
         <h2>GAMES</h2>
+
         <div class="game-entry">
-            <button onclick="downloadGame('swat.zip')">Snake with a twist</button>
-            <span class="description">Use arrows to move, and S for shop, unzip the folder, go into src, go into dist, then open up main.py</span>
+            <button onclick="openLink('https://example.com')">Button one</button>
+            <span class="description">description</span>
         </div>
 
-        <!-- 👇 Add more game entries like this -->
+        <!-- Add more game entries like this -->
         <!--
         <div class="game-entry">
-            <button onclick="downloadGame('anothergame.exe')">Button two</button>
+            <button onclick="openLink('https://another-link.com')">Button two</button>
             <span class="description">another description</span>
         </div>
         -->
-
     </div>
 </body>
 </html>
