--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h2>GAMES</h2>
 
         <div class="game-entry">
-            <button onclick="openLink('https://example.com')">Button one</button>
-            <span class="description">description</span>
+            <button onclick="openLink('https://drive.google.com/file/d/1HkI5F2RHg6NEj7wu5L6gQPqdmLWQRM_x/view?usp=sharing')">Snake With A Twist</button>
+            <span class="description">Just open main.py</span>
         </div>
 
         <!-- Add more game entries like this -->
